Change name of main page

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -27,7 +27,7 @@
     {% if title %}
     <title> {{ title }}</title>
     {% else %}
-    <title> IranBnB </title>
+    <title> Forooshgah </title>
     {% endif %}
 
 </head>
