--- a/main/templates/main/sale-success.html
+++ b/main/templates/main/sale-success.html
@@ -1,6 +1,6 @@
 {% extends "main/base.html" %}
 {% block content %}
 
-<h2>خانه با موفقیت رزرو شد.</h2>
+<h2>فروش با موفقیت انجام شد</h2>
 
 {% endblock %}
